--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -181,8 +181,6 @@ fr:
         optimization_cluster_size: Taille des clusters d'optimisation
         optimization_time: Temps d'optimisation maximum par véhicule
         optimization_minimal_time: Temps d'optimisation minimal par véhicule
-        optimization_stop_soft_upper_bound: Coefficient retards / arrêts
-        optimization_vehicle_soft_upper_bound: Coefficient retards / véhicules
         optimization_cost_waiting_time: Coefficient de temps d'attente
         optimization_force_start: Forcer l'heure de départ du véhicule
         enable_orders: Activer les commandes
@@ -192,7 +190,7 @@ fr:
         enable_vehicle_position: Activer la position des véhicules
         enable_stop_status: Activer les statuts des visites
         enable_sms: Activer l'envoi de SMS
-        enable_optimization_soft_upper_bound: Autoriser les retards
+        enable_optimization_soft_upper_bound: Autoriser les dépassements horaires
         sms_template: Modèle SMS clients
         sms_driver_template: Modèle SMS livreurs
         sms_concat: SMS longs
@@ -204,7 +202,7 @@ fr:
         print_stop_time: Inclure les horaires de passage
         print_barcode: Code barre
         speed_multiplier: Ajustement de la vitesse
-        stop_max_upper_bound: Retard max créneaux horaires visites
+        stop_max_upper_bound: Dépassement max créneaux horaires visites
         vehicle_max_upper_bound: Dépassement max amplitude chauffeur
         router: Calculateur d'itinéraire
         router_warning: Ce calculateur d'itinéraire n'est pas autorisé dans ce profil
@@ -1073,18 +1071,6 @@ fr:
       optimization_minimal_time_help: >-
         Vous pouvez préciser ici une durée minimale, par véhicule. Sinon
         l'optimisation s'arrête par défaut automatiquement.
-      optimization_soft_upper_bound_default: '%{n} (valeur par défaut)'
-      optimization_stop_soft_upper_bound_help: >-
-        Plus la valeur est grande plus les retards seront pénalisants (0 pour
-        empêcher les retards de manière stricte : désactive les clusters dans ce
-        cas).<br> Valeurs conseillées :<br> - Au plus rapide: 0 à 1<br> - Au
-        plus court: 0 à 30
-      optimization_vehicle_soft_upper_bound_help: >-
-        Pour une optimisation globale, permet de gérer la répartition sur les
-        véhicules. Plus la valeur est grande plus les retards seront pénalisants
-        (0 pour empêcher les retards de manière stricte : désactive les clusters
-        dans ce cas).<br> Valeurs conseillées :<br> - Au plus rapide : 0 à 1<br>
-        - Au plus court : 0 à 30
       optimization_cost_waiting_time_default: '%{n} (valeur par défaut)'
       optimization_cost_waiting_time_help: >-
         Permet d'évaluer l'importance des temps d'attente. Plus la valeur est
@@ -1093,10 +1079,10 @@ fr:
         Valeurs conseillées :<br> - Au plus rapide : 0 à 1<br> - Au plus court :
         non pris en compte
       optimization_force_start_help: Forcer le départ du véhicule à son horaire de début.
-      enable_optimization_soft_upper_bound_help: Autoriser les retards durant l'optimisation
+      enable_optimization_soft_upper_bound_help: Autoriser les dépassements horaires durant l'optimisation
       enable_global_optimization_test: Actif si Test
-      stop_max_upper_bound: Retard max créneaux horaires visites
-      stop_max_upper_bound_help: Autoriser les retards sur les arrêts
+      stop_max_upper_bound: Dépassement max créneaux horaires visites
+      stop_max_upper_bound_help: Autoriser les dépassements horaires sur les arrêts
       vehicle_max_upper_bound: Dépassement max amplitude chauffeur
       vehicle_max_upper_bound_help: Autoriser les dépassements horaires sur les tournées
       print_header_help: Bloc de texte ajouté avant chaque tournée
@@ -2122,13 +2108,13 @@ fr:
             Attention : Les arrêts non assignés seront affectés à un véhicule
             durant l'optimisation. Si ce comportement n'est pas souhaité,
             veuillez les verrouiller.
-          enable_soft_upper_bound: Autoriser les retards
+          enable_soft_upper_bound: Autoriser les dépassements horaires
           enable_optimization_soft_upper_bound_true_help: >-
-            Autoriser les retards
+            Autoriser les dépassements horaires
           enable_optimization_soft_upper_bound_false_help: >-
-            Interdire les retards
+            Interdire les dépassements horaires
           vehicle_max_upper_bound: 'Hors amplitude chauffeur'
-          stop_max_upper_bound: 'Retard créneaux visites'
+          stop_max_upper_bound: 'Dépassements créneaux visites'
         optimizer:
           title: Optimisation
           in_progress: 'Processus en cours, merci de patienter.'
