--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -237,6 +237,7 @@ fr:
         icon: Icône
         default_quantity: Quantité par défaut
         default_capacity: Capacité par défaut
+        default_initial_load: Chargement initial par défaut
         operation_fill: Remplissage
         operation_empty: Vidage
         optimization_overload_multiplier: Coefficient dépassement chargement
@@ -1157,6 +1158,9 @@ fr:
         Quantité à livrer par défaut à toutes vos visites (laisser vide si pas
         de quantité).
       default_capacity_help: Capacité par défaut de tous vos véhicules (laisser vide si illimité).
+      default_initial_load_help: >-
+        Charge initiale maximale par défaut de tous vos véhicules (laisser vide si pas
+        de charge initiale).
       optimization_overload_multiplier_no: Non
       optimization_overload_multiplier_no_help: >-
         Lors de l'optimisation, si vous indiquez une capacité pour vos
@@ -2579,7 +2583,7 @@ fr:
         help: Consommation moyenne aux 100 km en litres de carburant
         help_miles: Consommation moyenne aux 62.1 mi. en litres de carburant
       capacities:
-        label: Capacités
+        label: Chargement initial max. / Capacités
         default: '%{n} (valeur par défaut)'
         no_overload: ' (sans dépassement)'
         ignore_overload: ' (ignoré)'
