Messagings - fix missing or invalid credentials

--- a/config/locales/en.devices.yml
+++ b/config/locales/en.devices.yml
@@ -448,6 +448,7 @@ en:
         balance: Balance
         balance_help: Balance of the SMS sending service.
         title: Messaging service
+        credentials_invalid: Invalid credentials
         vonage:
           title: Vonage
           help: Allows sending SMS with Vonage.
