--- a/config/locales/fr.devices.yml
+++ b/config/locales/fr.devices.yml
@@ -448,6 +448,7 @@ fr:
         balance: Solde
         balance_help: Solde du service d'envoi de SMS.
         title: Service d'envoi
+        credentials_invalid: Identifiants invalides
         vonage:
           api_key: Clé API
           api_secret: Secret API
