--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -257,6 +257,7 @@ fr:
         lng: Longitude
         comment: Commentaire
         comment_small: Comment.
+        duration: Durée à la destination
         phone_number: Numéro de téléphone
         phone_number_small: Tél.
         geocoding_accuracy: Qualité du géocodage
@@ -1204,7 +1205,7 @@ fr:
       detail_help: 'Complément d''adresse non géocodable, ex. numéro d''escalier'
       comment_help: Informations nécessaires pour la livraison
       duration_default: défaut
-      duration_help: 'Si vide utilise la valeur par défaut, format hh:mm:ss'
+      duration_help: 'Durée appliquée une seule fois par destination quelque soit le nombre de visites successives.Si vide utilise la valeur par défaut, format hh:mm:ss'
       locate_manually: Positionner manuellement sur la carte
       geocoding_accuracy_none: Non applicable
       geocoding_fail: Le géocodage a échoué
